<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zk.prodetail.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/textTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/DIMEN_10PX"
            android:drawableStart="@mipmap/proceed"
            android:text="@string/proceed" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/DIMEN_20PX"
            android:background="@color/oldlace"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_proceed_cut"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_view_border"
                android:text="@string/cut" />

            <TextView
                android:id="@+id/tv_proceed_check"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_view_border"
                android:text="@string/check" />

            <TextView
                android:id="@+id/tv_proceed_carving"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_view_border"
                android:text="@string/code" />

            <TextView
                android:id="@+id/tv_proceed_scan"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_view_border"
                android:text="@string/scan" />

            <TextView
                android:id="@+id/tv_proceed_weld"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_view_border"
                android:text="@string/weld" />

            <TextView
                android:id="@+id/tv_proceed_save"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_view_border"
                android:text="@string/save" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/textTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/DIMEN_10PX"
            android:drawableStart="@mipmap/task"
            android:text="@string/current_task" />

        <ListView
            android:id="@+id/lv_current_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>


</LinearLayout>
